feat: add Token feature
