# src/main/java/dev/razafindratelo/misinformation/endpoint/rest/controller/AuthController.java
@@ -2,7 +2,9 @@ package dev.razafindratelo.misinformation.endpoint.rest.controller;
 
 import dev.razafindratelo.misinformation.endpoint.rest.controller.model.LoginRequest;
 import dev.razafindratelo.misinformation.endpoint.rest.controller.model.LoginResponse;
+import dev.razafindratelo.misinformation.endpoint.rest.controller.model.TokenRequest;
 import dev.razafindratelo.misinformation.manager.AuthManager;
+import dev.razafindratelo.misinformation.model.Token;
 import lombok.RequiredArgsConstructor;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestBody;
@@ -18,5 +20,10 @@ public class AuthController {
   @PostMapping("/login")
   public LoginResponse login(@RequestBody LoginRequest loginRequest) {
     return authManager.authenticate(loginRequest);
+  }
+
+  @PostMapping("/token")
+  public Token saveUserToken(@RequestBody TokenRequest tokenRequest) {
+    return authManager.saveUserToken(tokenRequest);
   }
 }
